--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,12 @@
         "symfony/form": "6.2.*",
         "symfony/framework-bundle": "6.2.*",
         "symfony/runtime": "6.2.*",
+        "symfony/security-bundle": "6.2.*",
         "symfony/security-csrf": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
-        "symfony/yaml": "6.2.*"
+        "symfony/yaml": "6.2.*",
+        "twbs/bootstrap": "^5.2"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "^2.9",
