--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,12 @@ security:
         main:
             lazy: true
             provider: users_in_memory
+            form_login:
+                login_path: app_login
+                check_path: app_login
+            logout:
+                path: app_logout
+                target: deal_index
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
