--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,10 +15,8 @@ security:
             security: false
         main:
             lazy: true
-            provider: users_in_memory
-            form_login:
-                login_path: app_login
-                check_path: app_login
+            provider: app_user_provider
+            custom_authenticator: App\Security\AppAuthenticator
             logout:
                 path: app_logout
                 target: deal_index
