--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/validator": "6.2.*",
         "symfony/webpack-encore-bundle": "^2.0",
         "symfony/yaml": "6.2.*",
-        "twbs/bootstrap": "^5.2"
+        "twbs/bootstrap": "^5.2",
+        "vich/uploader-bundle": "^2.1"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "^2.9",
