--- a/.env
+++ b/.env
@@ -29,3 +29,7 @@ DATABASE_URL="mysql://lpa_sf6:lpa_sf6@lpa_sf6_mysql/dealabs"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://mailcatcher:1025
+###< symfony/mailer ###
