Ajout notation des deals fonctionelle (reste a ajouter le fait qu'un utilisateur non connecté peut pas voter)

--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=a9f24b62b941084557aa3152a242b02c
+APP_LOG_LEVEL=error
 ###< symfony/framework-bundle ###
 DATABASE_URL="mysql://lpa_sf6:lpa_sf6@lpa_sf6_mysql/dealabs"
 
