--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/runtime": "6.2.*",
         "symfony/security-bundle": "6.2.*",
         "symfony/security-csrf": "6.2.*",
+        "symfony/stimulus-bundle": "^2.9",
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/webpack-encore-bundle": "^2.0",
