--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@hotwired/stimulus": "^3.0.0",
     "webpack-notifier": "^1.15.0"
   }
 }
