--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@hotwired/stimulus": "^3.0.0",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "webpack-notifier": "^1.15.0"
   }
 }
